Add unit display

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -142,7 +142,7 @@
         "oval":"oval",
         "circle":"Circle/Ring",
         "m_no":"Member\nNo",
-        "m_len":"Distance",
+        "m_len":"Distance\n(m)",
         "g_no":"Group No",
         "g_name":"Part name",
         "section":"Cross section (mm)",
@@ -161,7 +161,7 @@
         "s_len":"Shear span length (mm)",
         "m_no":"Member\nNo",
         "p_id":"Calculation point",
-        "position":"Position",
+        "position":"Position\n(m)",
         "b_check":"Bending check",
         "s_check":"Shear check",
         "t_check":"Torsion check",
@@ -172,27 +172,28 @@
     },
     "bars":{
         "m_no":"Member\nNo",
-        "position":"Position",
+        "position":"Position\n(m)",
+        "position_":"Position",
         "p_name":"Calculated point name",
-        "bh":"Section\nB\nH",
-        "haunch":"Haunch height",
+        "bh":"Section\nB\nH\n(mm)",
+        "haunch":"Haunch height\n(mm)",
         "bending":"Bending",
         "shear":"Shear",
         "rebar_ax":"Axial rebar",
-        "dia":"Reinforcing bar diameter",
+        "dia":"Reinforcing bar diameter\n(mm)",
         "number":"Number",
-        "cover":"Cover\n1st cut",
+        "cover":"Cover\n1st cut\n(mm)",
         "lines":"Number of lines",
-        "space":"Space",
-        "ss":"Interval",
+        "space":"Space\n(mm)",
+        "ss":"Interval\n(mm)",
         "rebar_la":"Lateral rebar",
         "pieces":"Pieces",
         "rebar_sh":"Shear reinforcement rebar",
         "rebar_ob":"Oblique ratio of main reinforcing bar",
         "rebar_fo":"Folded rebar",
-        "angle":"Angle",
+        "angle":"Angle\n(°)",
         "process":"Process",
-        "tp":"Top position",
+        "tp":"Top position\n(mm)",
         "tp_side":"Top position side cover"
     },
     "steels":{
@@ -216,19 +217,19 @@
         "cor":"Corrosive",
         "es_cor":"Especially severe corrosiveness",
         "m_no":"Member\nNo",
-        "position":"Position",
+        "position":"Position\n(m)",
         "p_name":"Calculated point name",
         "top":"Upper side",
         "under":"Lower side",
         "shear":"Shear",
-        "crack":"Crack εcsd",
+        "crack":"Crack εcsd\n(x10^-6)",
         "shear_kr":"Shear kr",
         "exterior":"Exterior",
         "JRTT05": "Don't omit"
     },
     "shear-strength":{
         "m_no":"Member\nNo",
-        "position":"Position",
+        "position":"Position\n(m)",
         "p_name":"Calculated point name",
         "s_len":"Shear span length (mm)",
         "s_len_a":"Shear span length\n a(mm)",
@@ -241,9 +242,10 @@
     "fatigues":{
         "durable":"Durable life",
         "m_no":"Member\nNo",
-        "position":"Position",
+        "position":"Position\n(m)",
+        "position_":"Position",
         "p_name":"Calculated point name",
-        "bh":"Section\nB\nH",
+        "bh":"Section\nB\nH\n(mm)",
         "for_b":"For bending",
         "d_r2":"Double track correction r2",
         "b_r1":"Bending r1",
@@ -314,10 +316,10 @@
         "s_safe":"Shear factor of safety",
         "t_safe":"Torsion factor of safety",
         "γi":"Coefficient γi",
-        "ys":"Yield strength",
+        "ys":"Yield strength\n(N/mm2)",
         "d25":"D25 or less",
         "d29":"D29 and above",
-        "dts":"Design tensile strength",
+        "dts":"Design tensile strength\n(N/mm2)",
         "d_u":"Durability, usability",
         "safe_ff":"Safety (fatigue fracture)",
         "safe_d":"Safety (destruction)",
