--- a/src/assets/i18n/ja.json
+++ b/src/assets/i18n/ja.json
@@ -142,7 +142,7 @@
         "oval":"小判",
         "circle":"円形・円環",
         "m_no":"部材\n番号",
-        "m_len":"部材長",
+        "m_len":"部材長\n(m)",
         "g_no":"グループNo",
         "g_name":"部材名",
         "section":"断面(mm)",
@@ -161,7 +161,7 @@
         "s_len":"せん断スパン長(mm)",
         "m_no":"部材\n番号",
         "p_id":"算出点",
-        "position":"位置",
+        "position":"位置\n(m)",
         "b_check":"曲げ照査",
         "s_check":"せん断照査",
         "t_check":"ねじり照査",
@@ -172,32 +172,33 @@
     },
     "bars":{
         "m_no":"部材\n番号",
-        "position":"位置",
+        "position":"位置\n(m)",
+        "position_":"位置",
         "p_name":"算出点名",
-        "bh":"断面BH",
-        "haunch":"ハンチ高",
+        "bh":"断面BH\n(mm)",
+        "haunch":"ハンチ高\n(mm)",
         "bending":"曲げ",
         "shear":"せん断",
         "rebar_ax":"軸方向鉄筋",
-        "dia":"鉄筋径",
+        "dia":"鉄筋径\n(mm)",
         "number":"本数",
-        "cover":"芯かぶり\n1段目",
+        "cover":"芯かぶり\n1段目\n(mm)",
         "lines":"ならび\n本数",
-        "space":"段間隔",
-        "ss":"間隔",
+        "space":"段間隔\n(mm)",
+        "ss":"間隔\n(mm)",
         "rebar_la":"側方鉄筋",
         "pieces":"本数片",
         "rebar_sh":"せん断補強鉄筋",
         "rebar_ob":"主鉄筋の斜率",
         "rebar_fo":"折曲げ鉄筋",
-        "angle":"角度",
+        "angle":"角度\n(°)",
         "process":"処理",
-        "tp":"上端位置",
+        "tp":"上端位置\n(mm)",
         "tp_side":"上端位置\n/側芯かぶり"
     },
     "steels":{
         "m_no":"部材\n番号",
-        "position":"位置",
+        "position":"位置\n(m)",
         "p_name":"算出点名",
         "bh":"断面\nB\nH",
         "dis_above":"上からの距離",
@@ -216,19 +217,19 @@
         "cor":"腐食性",
         "es_cor":"とくに厳しい腐食性",
         "m_no":"部材\n番号",
-        "position":"位置",
+        "position":"位置\n(m)",
         "p_name":"算出点名",
         "top":"上側",
         "under":"下側",
         "shear":"せん断",
-        "crack":"ひび割 εcsd",
+        "crack":"ひび割 εcsd\n(x10^-6)",
         "shear_kr":"せん断\nkr",
         "exterior":"外観",
         "JRTT05": "省略しない"
     },
     "shear-strength":{
         "m_no":"部材\n番号",
-        "position":"位置",
+        "position":"位置\n(m)",
         "p_name":"算出点名",
         "s_len":"せん断スパン長(mm)",
         "s_len_a":"せん断スパン長\n a(mm)",
@@ -241,9 +242,10 @@
     "fatigues":{
         "durable":"耐用年数",
         "m_no":"部材\n番号",
-        "position":"位置",
+        "position":"位置\n(m)",
+        "position_":"位置",
         "p_name":"算出点名",
-        "bh":"断面\nB\nH",
+        "bh":"断面\nB\nH\n(mm)",
         "for_b":"曲げ用",
         "d_r2":"複線補正 r2",
         "b_r1":"曲げ加工 r1",
@@ -314,10 +316,10 @@
         "s_safe":"せん断安全係数",
         "t_safe":"ねじり安全係数",
         "γi":"係数γi",
-        "ys":"降伏強度",
+        "ys":"降伏強度\n(N/mm2)",
         "d25":"D25以下",
         "d29":"D29以上",
-        "dts":"設計引張強度",
+        "dts":"設計引張強度\n(N/mm2)",
         "d_u":"耐久性, 使用性",
         "safe_ff":"安全性 （疲労破壊）",
         "safe_d":"安全性 （破壊）",
