アプリ名をWebDanforJSからWebDanforJS_Testへ変更

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,6 +1,6 @@
 {
     "menu": {
-        "softName": "WebDanforJS",
+        "softName": "WebDanforJS_Test",
         "file": "file",
         "newEntry":"Create a new file",
         "openFile":"Open file",
