--- a/src/assets/i18n/ja.json
+++ b/src/assets/i18n/ja.json
@@ -567,7 +567,10 @@
     "modal": {
         "close": "閉じる",
         "cancel": "キャンセル",
-        "ok": "OK"
+        "ok": "はい",
+        "reboot": "後でアップデート",
+        "updateMessage": "アップデートがあります。\n 再起動してアップデートを行いますか？\nキャンセルを選ばれた場合、アプリ終了後に自動アップデートされます。",
+        "updateTitle": "Application update"
     },
     "window": {
         "closeTitle": "確認",
